Therer were a couple of issues with original blocks: Problem 0: Screen size 0-768px: The 'En savoir plus' button was overlapping with restaurant description text. Correction 0: margin-bottom: 50px was added to class content in media query @media screen and (max-width:768px) Problem 1: Screen size 641px-768px: The restaurant title overlaps with phone and address. Correction 1: The address and phone were placed under the restaurant title for all screen sizes smaller than or equal to 768px Problem 2: The responsiveness was not implemented for medium size screens (769px-1300px) Correction 2: an additional media-query was added: @media screen and (max-width:1300px)

--- a/css/style.css
+++ b/css/style.css
@@ -52,13 +52,13 @@ figure.float-droite {
 	position: relative;
 }
 .adresse, .tel {
-font-size: 0.8em;
-font-style: italic;
-color: gray;
-text-align: right;
-position: absolute;
-right:0;
-margin:0;
+    font-size: 0.8em;
+    font-style: italic;
+    color: gray;
+    text-align: right;
+    position: absolute;
+    right:0;
+    margin:0;
 }
 .adresse {
 	top:0;
@@ -80,11 +80,35 @@ h2 {
 	right:10px;
 }
 
+/*correction-3: added new media query*/
+
+@media screen and (max-width:1300px) {
+    .container {
+        width: 98%;
+    }
+}
+
 @media screen and (max-width:768px) {
-	body { border :none;}
-	.container {
-	width: 98%;
+	body { border :none;
+
 	}
+
+	.container {
+	    width: 98%;
+	}
+
+    /*correction-0: added*/
+    .content {
+        margin-bottom: 50px;
+    }
+
+    /*correction-1: added*/
+    .adresse, .tel {
+        position: static;
+        text-align: left;
+        margin: 0.5em 0;
+    }
+
 	.resto {
 		min-height: 250px;
 	}
@@ -103,11 +127,6 @@ h2 {
 		width: 100%
 	}
 
-	.adresse, .tel {
-		position: static;
-		text-align: left;
-		margin: 0.5em 0;
-	}
 	.resto {
 		min-height: 570px;
 	}
